--- a/popup.html
+++ b/popup.html
@@ -28,12 +28,12 @@
       color: #000000;
     }
 
-  a{
-    text-decoration: none;
-    color: #000;
-    font-size: 20px;
-  }
-    
+    a {
+      text-decoration: none;
+      color: #000;
+      font-size: 20px;
+    }
+
     img {
       width: 30px;
     }
@@ -47,15 +47,14 @@
       padding: 0 22px;
     }
 
-   
+    p {
+      font-size: 15px;
+    }
 
     .logo-icon {
       vertical-align: text-bottom;
       margin-right: 12px;
     }
-
-
-
   </style>
 
 </head>
@@ -63,7 +62,9 @@
 <body>
   <div class="modal-header">
     <h1 class="logo">
-      <img class="logo-icon" src="images/tdi_logo.png"><a href="http://www.tdiradio.com/site/"> TDI RADIO</span></a>
+      <img class="logo-icon" src="images/tdi_logo.png">
+      <a href="http://www.tdiradio.com/site/"> TDI RADIO</span>
+      </a>
     </h1>
   </div>
 
@@ -71,18 +72,18 @@
     <div>
       <h2>TOP 40</h2>
       <p>Utorak u 16:00</p>
-
+      <hr>
     </div>
     <div>
       <h2>Antidepresiv</h2>
       <p>Sreda u 16:00</p>
-
+      <hr>
     </div>
     <div>
       <h2>Kontra Kviz</h2>
       <p>Cetvrtak u 16:00</p>
     </div>
-
+    <hr>
   </div>
   <script src="background.js"></script>
 </body>
