Fixed Stop Command

--- a/popup.html
+++ b/popup.html
@@ -66,6 +66,8 @@
       <a href="http://www.tdiradio.com/site/"> TDI RADIO</span>
       </a>
     </h1>
+    <p>ALT + 1 PLAY  |  ALT + 2 STOP</p>
+    <p></p>
   </div>
 
   <div class="modal-content">
